tests/baselines/reference/genericSpecializations2.errors.txt
tests/cases/compiler/genericSpecializations2.ts(8,5): error TS2416: Property 'foo' in type 'IntFooBad' is not assignable to the same property in base type 'IFoo<number>'.
  Type '<string>(x: string) => string' is not assignable to type '<T>(x: T) => T'.
    Types of parameters 'x' and 'x' are incompatible.
      Type 'T' is not assignable to type 'string'.
tests/cases/compiler/genericSpecializations2.ts(8,9): error TS2368: Type parameter name cannot be 'string'.
tests/cases/compiler/genericSpecializations2.ts(12,5): error TS2416: Property 'foo' in type 'StringFoo2' is not assignable to the same property in base type 'IFoo<string>'.
  Type '<string>(x: string) => string' is not assignable to type '<T>(x: T) => T'.
    Types of parameters 'x' and 'x' are incompatible.
      Type 'T' is not assignable to type 'string'.
tests/cases/compiler/genericSpecializations2.ts(12,9): error TS2368: Type parameter name cannot be 'string'.


==== tests/cases/compiler/genericSpecializations2.ts (4 errors) ====
    class IFoo<T> {
        foo<T>(x: T): T { // no error on implementors because IFoo's T is different from foo's T
            return null;
        }
    }
    
    class IntFooBad implements IFoo<number> {
        foo<string>(x: string): string { return null; }
        ~~~
!!! error TS2416: Property 'foo' in type 'IntFooBad' is not assignable to the same property in base type 'IFoo<number>'.
!!! error TS2416:   Type '<string>(x: string) => string' is not assignable to type '<T>(x: T) => T'.
!!! error TS2416:     Types of parameters 'x' and 'x' are incompatible.
!!! error TS2416:       Type 'T' is not assignable to type 'string'.
            ~~~~~~
!!! error TS2368: Type parameter name cannot be 'string'.
    }
    
    class StringFoo2 implements IFoo<string> {
        foo<string>(x: string): string { return null; }
        ~~~
!!! error TS2416: Property 'foo' in type 'StringFoo2' is not assignable to the same property in base type 'IFoo<string>'.
!!! error TS2416:   Type '<string>(x: string) => string' is not assignable to type '<T>(x: T) => T'.
!!! error TS2416:     Types of parameters 'x' and 'x' are incompatible.
!!! error TS2416:       Type 'T' is not assignable to type 'string'.
            ~~~~~~
!!! error TS2368: Type parameter name cannot be 'string'.
    }
    
    class StringFoo3 implements IFoo<string> {
        foo<T>(x: T): T { return null; }
    }
    
    